crates/apollo-compiler/test_data/diagnostics/0095_interface_implementation_declared_once.txt
Error: type `Object` can only implement interface `Intf` once
   ╭─[0095_interface_implementation_declared_once.graphql:5:31]
   │
 5 │ type Object implements Intf & Intf {
   │                        ──┬─   ──┬─  
   │                          ╰────────── `Intf` interface implementation previously declared here
   │                                 │   
   │                                 ╰─── `Intf` interface implementation declared again here
───╯
Error: type `Extended` can only implement interface `Intf` once
    ╭─[0095_interface_implementation_declared_once.graphql:12:33]
    │
  9 │ type Extended implements Intf {
    │                          ──┬─  
    │                            ╰─── `Intf` interface implementation previously declared here
    │ 
 12 │ extend type Extended implements Intf
    │                                 ──┬─  
    │                                   ╰─── `Intf` interface implementation declared again here
────╯
Error: type `SubIntf` can only implement interface `Intf` once
    ╭─[0095_interface_implementation_declared_once.graphql:14:37]
    │
 14 │ interface SubIntf implements Intf & Intf {
    │                              ──┬─   ──┬─  
    │                                ╰────────── `Intf` interface implementation previously declared here
    │                                       │   
    │                                       ╰─── `Intf` interface implementation declared again here
────╯

